Fix spacing issue

--- a/front-end/src/HamburgerSignedIn.css
+++ b/front-end/src/HamburgerSignedIn.css
@@ -16,5 +16,5 @@
 }
 
 .rbxLogoCollapsed {
-    padding-right: 50%;
+    padding-right: 0%;
 }
